--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -17,7 +17,7 @@
         </div>
         <div id="navbarMenuHeroA" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active">
+            <a class="navbar-item">
               Home
             </a>
             <a class="navbar-item">
@@ -67,27 +67,29 @@
     Peer to peer donation platform: easy, accessible, and transparent
   </div> -->
   <div class="tile is-ancestor">
-      <div class="tile is-4 is-vertical is-parent">
-          <div class="tile is-child box">
-            <p class="title"><i class="far fa-thumbs-up"></i>&nbsp;&nbsp;Reliable</p>
-            <p>Blockchain powered authentication and reputable institution partnerships promote 100% accurate donee profile.</p>
-          </div>
-        </div>
-      <div class="tile is-4 is-vertical is-parent">
-        <div class="tile is-child box">
-          <p class="title"><i class="fas fa-check"></i>&nbsp;&nbsp;Convenient</p>
-          <p>Donate with any fiat or crypto currency through the U.CARE platform with easy-to-use interface.</p>
-        </div>
+    <div class="tile is-4 is-vertical is-parent">
+      <div class="tile is-child box">
+        <p class="title"><i class="far fa-thumbs-up"></i>&nbsp;&nbsp;Reliable</p>
+        <p>Blockchain powered authentication and reputable institution partnerships promote 100% accurate donee
+          profile.</p>
       </div>
-      
-        <div class="tile is-4 is-vertical is-parent">
-            <div class="tile is-child box">
-              <p class="title"><i class="fas fa-globe-americas"></i>&nbsp;&nbsp;Impactful</p>
-              <p>Help people in needs who want to use your donation for good cause with U.CARE’s verified and qualified donee profile.</p>
-            </div>
-          </div>
-      
     </div>
+    <div class="tile is-4 is-vertical is-parent">
+      <div class="tile is-child box">
+        <p class="title"><i class="fas fa-check"></i>&nbsp;&nbsp;Convenient</p>
+        <p>Donate with any fiat or crypto currency through the U.CARE platform with easy-to-use interface.</p>
+      </div>
+    </div>
+
+    <div class="tile is-4 is-vertical is-parent">
+      <div class="tile is-child box">
+        <p class="title"><i class="fas fa-globe-americas"></i>&nbsp;&nbsp;Impactful</p>
+        <p>Help people in needs who want to use your donation for good cause with U.CARE’s verified and qualified donee
+          profile.</p>
+      </div>
+    </div>
+
+  </div>
 
 </div>
 <app-profile></app-profile>
