--- a/angular/src/app/profile/profile.component.html
+++ b/angular/src/app/profile/profile.component.html
@@ -1,15 +1,15 @@
 <div class="masonry">
   <ng-template ngFor let-item [ngForOf]="profilesArray" let-i="index">
     <div class="profile-box">
-    <img class="item" [src]="item.img">
-    <div class="content">  
-      <h1>{{ item.name }}</h1>
-      <p>{{ item.story }}</p>
+      <img class="item" [src]="item.img">
+      <div class="content">
+        <h1>{{ item.name }}</h1>
+        <p>{{ item.story }}</p>
+      </div>
+      <progress class="progress is-small is-primary" value="15" max="100">15%</progress>
+      <div class="content">$400 raised of $5,000</div>
+      <button class="button is-primary title is-6" (click)="sendDonation(i)">Send UCASH</button>
     </div>
-    <progress class="progress is-small is-primary" value="15" max="100">15%</progress>
-    <div class="content">$400 raised of $5,000</div>
-    <button class="button is-primary title is-6" (click)="sendDonation(i)">Send U.CASH</button>
-  </div>
   </ng-template>
 </div>
 
